--- a/index.html
+++ b/index.html
@@ -6,5 +6,54 @@
     <title>Before & After</title>
     <script type="module" src="script.js"></script>
   </head>
-  <body></body>
+  <body>
+    <div>
+      <h2>Number modification:Increment</h2>
+      <p>Before:</p>
+      <p>1</p>
+      <p>After:</p>
+      <p id="myNumber"></p>
+      <button id="myResult">Click Me!</button>
+    </div>
+    <div>
+      <h2>Number modification: Number to Exponential</h2>
+      <p>Before:</p>
+      <p>8.67345</p>
+      <p>After:</p>
+      <p id="myNum"></p>
+      <button id="myRes">Click Me!</button>
+    </div>
+    <div>
+      <h2>String modification: String length</h2>
+      <p>Before:</p>
+      <p>Web Development</p>
+      <p>After:[Find the length of "Web Development"]</p>
+      <p id="myString"></p>
+      <button id="myClick">Click Me!</button>
+    </div>
+    <div>
+      <h2>String modification: String slice</h2>
+      <p>Before:</p>
+      <p>Web Developer</p>
+      <p>After:</p>
+      <p id="myStr"></p>
+      <button id="myClickMe">Click Me!</button>
+    </div>
+    <div>
+      <h2>Array modification: Array push</h2>
+      <p>Before:</p>
+      <p>cats, dogs, goats</p>
+      <p>After:</p>
+      <p id="myVariable"></p>
+      <button id="mySubmit">Click Me!</button>
+    </div>
+    <div>
+      <h2>Array modification: Array pop</h2>
+      <p>Before:</p>
+      <p>apple, orange, banana</p>
+      <p>After:</p>
+      <p id="myVar"></p>
+      <button id="mySub">Click Me!</button>
+    </div>
+  </body>
 </html>
