--- a/index.html
+++ b/index.html
@@ -7,53 +7,75 @@
     <script type="module" src="script.js"></script>
   </head>
   <body>
-    <div>
-      <h2>Number modification:Increment</h2>
-      <p>Before:</p>
+    <div style="border: solid 2px black">
+      <h2 style="color: MediumSeaGreen">Number modification:Increment</h2>
+      <h3>Before:</h3>
       <p>1</p>
-      <p>After:</p>
+      <h3>After:</h3>
       <p id="myNumber"></p>
       <button id="myResult">Click Me!</button>
     </div>
-    <div>
-      <h2>Number modification: Number to Exponential</h2>
-      <p>Before:</p>
+    <div style="border: solid 2px black">
+      <h2 style="color: MediumSeaGreen">
+        Number modification: Number to Exponential
+      </h2>
+      <h3>Before:</h3>
       <p>8.67345</p>
-      <p>After:</p>
+      <h3>After:</h3>
       <p id="myNum"></p>
       <button id="myRes">Click Me!</button>
     </div>
-    <div>
-      <h2>String modification: String length</h2>
-      <p>Before:</p>
+    <div style="border: solid 2px black">
+      <h2 style="color: MediumSeaGreen">String modification: String length</h2>
+      <h3>Before:</h3>
       <p>Web Development</p>
-      <p>After:[Find the length of "Web Development"]</p>
+      <h3>After:[Find the length of "Web Development"]</h3>
       <p id="myString"></p>
       <button id="myClick">Click Me!</button>
     </div>
-    <div>
-      <h2>String modification: String slice</h2>
-      <p>Before:</p>
+    <div style="border: solid 2px black">
+      <h2 style="color: MediumSeaGreen">String modification: String slice</h2>
+      <h3>Before:</h3>
       <p>Web Developer</p>
-      <p>After:</p>
+      <h3>After:</h3>
       <p id="myStr"></p>
       <button id="myClickMe">Click Me!</button>
     </div>
-    <div>
-      <h2>Array modification: Array push</h2>
-      <p>Before:</p>
+    <div style="border: solid 2px black">
+      <h2 style="color: MediumSeaGreen">Array modification: Array push</h2>
+      <h3>Before:</h3>
       <p>cats, dogs, goats</p>
-      <p>After:</p>
+      <h3>After:</h3>
       <p id="myVariable"></p>
       <button id="mySubmit">Click Me!</button>
     </div>
-    <div>
-      <h2>Array modification: Array pop</h2>
-      <p>Before:</p>
+    <div style="border: solid 2px black">
+      <h2 style="color: MediumSeaGreen">Array modification: Array pop</h2>
+      <h3>Before:</h3>
       <p>apple, orange, banana</p>
-      <p>After:</p>
+      <h3>After:</h3>
       <p id="myVar"></p>
       <button id="mySub">Click Me!</button>
+    </div>
+    <div style="border: solid 2px black">
+      <h2 style="color: MediumSeaGreen">Object modification: Object keys</h2>
+      <h3>Before:</h3>
+      <p>iphone, samsung, blackberry, sony</p>
+      <h3>After:</h3>
+      <p id="myText"></p>
+      <button id="myOutput">Click Me!</button>
+    </div>
+    <div style="border: solid 2px black">
+      <h2 style="color: MediumSeaGreen">Object modification: Object values</h2>
+      <h3>Before:</h3>
+      <p>
+        firstName:Ryan<br />
+        lastName:Reynolds<br />
+        character:Deadpool
+      </p>
+      <h3>After:</h3>
+      <p id="myObject"></p>
+      <button id="myButton">Click Me!</button>
     </div>
   </body>
 </html>
